tests/diagnostics/declarations/functions/duplicate_name/expect.txt
# exit: 1
input/main.coppice:5:10: error: duplicate function 'foo'
  function foo() -> int64 {
           ^
